phase3-kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-laravel-service
  namespace: default
  labels:
    app: devops-laravel-app
spec:
  type: ClusterIP # Internal cluster communication, exposed to the outside via Ingress
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: devops-laravel-app
