phase3-kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-laravel-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # MNCs use cert-manager to automatically provision Let's Encrypt certificates
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
    - hosts:
        - api.hiteshdevops.com
      secretName: devops-laravel-tls
  rules:
    - host: api.hiteshdevops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-laravel-service
                port:
                  number: 80
